[package]
name = "aptos-network-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aptos-config = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-network = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-time-service = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }